--- a/src/app/components/detalles-oferta-empleo/detalles-oferta-empleo.component.html
+++ b/src/app/components/detalles-oferta-empleo/detalles-oferta-empleo.component.html
@@ -44,13 +44,19 @@
                 <div class="col-md-2 p-0" *ngFor="let dia of ofertaSeleccionada.diasLaborales | keyvalue"><p class="small-letter"><strong>{{dia.key | slice:0:1 | uppercase}}-{{dia.value | slice:0:3}}</strong></p></div>
             </div>-->
             <div class="row">
-                <button (click)="solicitarEmpleo()" *ngIf="ofertaSeleccionada.usuarioOfertante!=this.usuario.id" class="btn btn-wajoby">Solicitar Empleo <i class="fas fa-clipboard"></i></button>
+                <button (click)="solicitarEmpleo()" *ngIf="this.usuario && ofertaSeleccionada.usuarioOfertante!=this.usuario.id" class="btn btn-wajoby">Solicitar Empleo <i class="fas fa-clipboard"></i></button>
             </div>
         </div>
     </div>
     <div class="container mt-5 text-center" *ngIf="!ofertaSeleccionada">
         <app-no-encontrado></app-no-encontrado>
     </div>
+</div>
+<div class="container mt-5" *ngIf="ofertaSeleccionada.usuarioOfertante===this.usuario.id">
+    <button class="btn btn-secondary" (click)="mostrarOcultar()">Mostrar solicitudes de empleo</button>
+    <ul class="list-group mt-3" [hidden]="ocultado">
+        <li class="list-group-item" *ngFor="let usuario of listadoUsuariosSolicitudes">{{usuario.id}}</li><!--Hacr un listado bonito con los datos de los usuarios (a poder ser en  modal)-->
+    </ul>
 </div>
 <!--Tengo que sacar del modo vista previa al editar una oferta-->
 <app-modal-editar-oferta [oferta]="ofertaSeleccionada"></app-modal-editar-oferta>
