--- a/src/app/components/slidercategorias/slidercategorias.component.html
+++ b/src/app/components/slidercategorias/slidercategorias.component.html
@@ -2,7 +2,7 @@
     <div class="col-md-12 text-center">
       <div class="row">
         <h6 class="lead">Encuentra trabajo más fácil que nunca</h6>
-        <h1 class="mb-5">¿Que tipo de empleo estás buscando?</h1>
+        <h2 class="mb-5"><strong>¿Que tipo de empleo estás buscando?</strong></h2>
         <button class="btn btn-floating mt-5" (click)="section1Scroll()">
           <i class="fas fa-chevron-left"></i>
         </button>
