--- a/src/app/components/detalles-oferta-empleo/detalles-oferta-empleo.component.html
+++ b/src/app/components/detalles-oferta-empleo/detalles-oferta-empleo.component.html
@@ -3,7 +3,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-3">
-                    <a routerLink="/ofertas/{{ofertaSeleccionada.categoria}}" class="btn btn-light w-100"><i class="fas fa-arrow-left p-1"></i>Regresar a categoría</a>
+                    <a routerLink="/ofertas/{{ofertaSeleccionada?.categoria}}" class="btn btn-light w-100"><i class="fas fa-arrow-left p-1"></i>Regresar a categoría</a>
                 </div>
                 <div class="col-md-9 text-end" *ngIf="ofertaSeleccionada.usuarioOfertante===this.usuario.id">
                     <button (click)="modoVistaPrevia()" class="btn btn-primary btn-block" data-bs-toggle="modal" [attr.data-bs-target]="'#editarOfertaModal-'+ofertaSeleccionada.id">Editar oferta <i class="fas fa-edit"></i></button>
@@ -12,7 +12,7 @@
             </div>
         </div>
     </section>
-    <div *ngIf="ofertaSeleccionada.usuarioOfertante===this.usuario.id && this.vistaPrevia==true">
+    <div *ngIf="ofertaSeleccionada?.usuarioOfertante===this.usuario.id && this.vistaPrevia==true">
         <h1 class="text-center mt-5 mb-5">Modo Vista Previa <button (click)="salirVistaPrevia()" class="btn btn-danger"><i class="fas fa-times"></i></button></h1>
     </div>
     <div class="card border-light" *ngIf="ofertaSeleccionada">
@@ -20,31 +20,32 @@
             <div class="card-title">
                 <div class="row">
                     <div class="col">
-                        <h3>{{ofertaSeleccionada.titulo}}</h3>
+                        <h3>{{ofertaSeleccionada?.titulo | uppercase}}</h3>
                     </div>
                     <div class="col">
-                        <h3 class="text-end">{{ofertaSeleccionada.salario}}€</h3>
+                        <h3 class="text-end">{{ofertaSeleccionada?.salario}}€</h3>
                     </div>
                 </div>
             </div>
             <div class="card-subtitle text-muted">
-                <h6>{{ofertaSeleccionada.categoria}}</h6>
+                <h6>{{ofertaSeleccionada?.categoria | uppercase}}</h6>
             </div>
         </div>
 
 
         <div class="card-body text-center">
-            <img class="img-fluid" src="{{ofertaSeleccionada.imagen}}">
+            <img class="img-fluid" src="{{ofertaSeleccionada?.imagen}}">
         </div>
         <div class="card-body">
-            <p>{{ofertaSeleccionada.descripcion}}</p>
+            <p>{{ofertaSeleccionada?.descripcion}}</p>
         </div>
         <div class="card-footer text-muted">
             <!--<div class="row">
                 <div class="col-md-2 p-0" *ngFor="let dia of ofertaSeleccionada.diasLaborales | keyvalue"><p class="small-letter"><strong>{{dia.key | slice:0:1 | uppercase}}-{{dia.value | slice:0:3}}</strong></p></div>
             </div>-->
             <div class="row">
-                <button (click)="solicitarEmpleo()" *ngIf="this.usuario && ofertaSeleccionada.usuarioOfertante!=this.usuario.id" class="btn btn-wajoby">Solicitar Empleo <i class="fas fa-clipboard"></i></button>
+                <button (click)="solicitarEmpleo()" *ngIf="!solicitada && this.usuario && ofertaSeleccionada.usuarioOfertante!=this.usuario.id" class="btn btn-wajoby">Solicitar Empleo <i class="fas fa-clipboard"></i></button>
+                <button (click)="eliminarSolicitud(ofertaSolicitud)" *ngIf="solicitada && this.usuario && ofertaSeleccionada.usuarioOfertante!=this.usuario.id" class="btn btn-danger" style="border-radius: 100px;">Eliminar solicitud <i class="fas fa-clipboard"></i></button>
             </div>
         </div>
     </div>
@@ -52,12 +53,11 @@
         <app-no-encontrado></app-no-encontrado>
     </div>
 </div>
-<div class="container mt-5" *ngIf="ofertaSeleccionada.usuarioOfertante===this.usuario.id && this.solicitudesOferta.length>0">
+<div class="container mt-5" *ngIf="ofertaSeleccionada?.usuarioOfertante===this.usuario.id && this.solicitudesOferta.length>0">
     <button class="btn btn-secondary" (click)="mostrarOcultar()">Mostrar solicitudes de empleo</button>
     <ul class="list-group mt-3" [hidden]="ocultado">
-        <li class="list-group-item" *ngFor="let usuario of listadoUsuariosSolicitudes">{{usuario.id}}</li><!--Hacr un listado bonito con los datos de los usuarios (a poder ser en  modal)-->
+        <li class="list-group-item" *ngFor="let usuario of listadoUsuariosSolicitudes">{{usuario.id}}</li>
     </ul>
 </div>
-<!--Tengo que sacar del modo vista previa al editar una oferta-->
 <app-modal-editar-oferta [oferta]="ofertaSeleccionada"></app-modal-editar-oferta>
 
