--- a/src/app/components/info-portada/info-portada.component.html
+++ b/src/app/components/info-portada/info-portada.component.html
@@ -1,13 +1,33 @@
-<div class="container">
-    <div class="row">
-        <div class="col-md-12 text-center">
-            <div class="card">
-                <div class="card-header">
-                    <p>prueba</p>
-                </div>
-                <div class="card-body">
-                    <p class="card-text">prueba</p>
-                </div>
+<div class="container-fluid text-center mt-5" style="background-color: #ECEFF1; margin-bottom: 15px;">
+    <div class="container p-5">
+        <h2><strong>Las ofertas más solicitadas</strong></h2>
+        <div style="display: flex; margin-top: 30px;">
+            <div class="col-12 col-sm-6 col-md-4 infoPortada">
+                <a class="home-subsection" routerLink="/ofertas/fitness" title="Alfombra" data-subsection-title="Alfombra" data-section-order="1" rel="">
+                    <div class="card text-start">
+                        <img src="https://cdn-web-home-images.wallapop.com/home-images-prod/image_330_section_358_2702453a-a660-48d4-86e7-4bbb00b80e70.png?cacheBuster=TgumD43mvac8R8H/KX1tVg==" loading="lazy" alt="Sofá">                
+                        <h3 class="mt-2">Prueba</h3>
+                        <p class="text-muted mb-0">2.500 ofertas solicitadas</p>
+                    </div>
+                </a>
+            </div>
+            <div class="col-12 col-sm-6 col-md-4 infoPortada">
+                <a class="home-subsection" routerLink="/ofertas/fitness" title="Alfombra" data-subsection-title="Alfombra" data-section-order="1" rel="">
+                    <div class="card text-start">
+                        <img src="https://cdn-web-home-images.wallapop.com/home-images-prod/image_330_section_358_2702453a-a660-48d4-86e7-4bbb00b80e70.png?cacheBuster=TgumD43mvac8R8H/KX1tVg==" loading="lazy" alt="Sofá">                
+                        <h3 class="mt-2">Prueba</h3>
+                        <p class="text-muted mb-0">651.335 ofertas</p>
+                    </div>
+                </a>
+            </div>
+            <div class="col-12 col-sm-6 col-md-4 infoPortada">
+                <a class="home-subsection" routerLink="/ofertas/fitness" title="Alfombra" data-subsection-title="Alfombra" data-section-order="1" rel="">
+                    <div class="card text-start">
+                        <img src="https://cdn-web-home-images.wallapop.com/home-images-prod/image_330_section_358_2702453a-a660-48d4-86e7-4bbb00b80e70.png?cacheBuster=TgumD43mvac8R8H/KX1tVg==" loading="lazy" alt="Sofá">                
+                        <h3 class="mt-2">Prueba</h3>
+                        <p class="text-muted mb-0">651.335 ofertas</p>
+                    </div>
+                </a>
             </div>
         </div>
     </div>
