--- a/src/app/components/perfil/perfil.component.html
+++ b/src/app/components/perfil/perfil.component.html
@@ -32,16 +32,36 @@
     <app-carga-curriculum *ngIf="usuarioActivo" [usuarioActivo]="usuarioActivo"></app-carga-curriculum>
 </section>
 <!--Me gustaría hacer un pequeño menú para dividir las ofertas de empleo creadas y las solicitudes de empleo enviadas-->
-<section id="header-perfil" class="py-4 mb-4 mt-4 bg-light">
+<section id="header-perfil-ofertas" class="py-4 mb-4 mt-4 bg-light">
     <div class="container">
-        <div class="row text-center">
-            <h2>Tus ofertas de empleo creadas</h2>
-        </div>
-        <div class="row text-start mb-2">
-            <app-modal-crear-oferta></app-modal-crear-oferta>
-        </div>
-        <div class="row">
-            <app-lista-ofertas-perfil></app-lista-ofertas-perfil>
-        </div>
+        <ul class="nav nav-tabs" id="myTab" role="tablist">
+            <li class="nav-item" role="presentation">
+              <button class="nav-link active" id="home-tab" data-bs-toggle="tab" data-bs-target="#home" type="button" role="tab" aria-controls="home" aria-selected="true">Ofertas</button>
+            </li>
+            <li class="nav-item" role="presentation">
+              <button class="nav-link" id="profile-tab" data-bs-toggle="tab" data-bs-target="#profile" type="button" role="tab" aria-controls="profile" aria-selected="false">Solicitudes</button>
+            </li>
+          </ul>
+          <div class="tab-content" id="myTabContent">
+            <div class="tab-pane fade show active" id="home" role="tabpanel" aria-labelledby="home-tab">
+                <div class="row text-center mt-5">
+                    <h2>Tus ofertas de empleo creadas</h2>
+                </div>
+                <div class="row text-start mb-2">
+                    <app-modal-crear-oferta></app-modal-crear-oferta>
+                </div>
+                <div class="row">
+                    <app-lista-ofertas-perfil></app-lista-ofertas-perfil>
+                </div>    
+            </div>
+            <div class="tab-pane fade" id="profile" role="tabpanel" aria-labelledby="profile-tab">
+                <div class="row text-center mt-5">
+                    <h2>Tus solicitudes de empleo</h2>
+                </div>
+                <div class="row">
+                    <app-lista-solicitudes-perfil></app-lista-solicitudes-perfil>
+                </div>
+            </div>
+          </div>
     </div>
 </section>
