--- a/src/app/components/carga-curriculum/carga-curriculum.component.html
+++ b/src/app/components/carga-curriculum/carga-curriculum.component.html
@@ -1,8 +1,8 @@
 <div class="container text-center">
     <h2>Tu curriculum</h2>
     <a class="btn btn-primary" *ngIf="urlCv" href="{{urlCv | async}}" target="_blank">Ver curriculum</a>
-    <button class="btn btn-danger" *ngIf="urlCv"><i class="fas fa-trash" (click)="eliminarCV()"></i></button>
-    <div style="width: fit-content;" class="m-auto">
+    <button class="btn btn-danger" style="margin-left: 25px;" *ngIf="urlCv"><i class="fas fa-trash" (click)="eliminarCV()"></i></button>
+    <div style="width: fit-content;" class="m-auto mt-3">
         <label for="cvpdf" class="form-label">Sube tu curriculum en formato pdf (max. 2MB)</label>
         <input class="form-control" type="file" id="cvpdf" accept=".pdf" (change)="cvSeleccionado($event)">
         <div class="progress mt-2" [hidden]="(uploadPercent | async) == null">
