--- a/src/app/components/info-portada/info-portada.component.html
+++ b/src/app/components/info-portada/info-portada.component.html
@@ -7,7 +7,7 @@
                     <div class="card text-start">
                         <img src="https://cdn-web-home-images.wallapop.com/home-images-prod/image_330_section_358_2702453a-a660-48d4-86e7-4bbb00b80e70.png?cacheBuster=TgumD43mvac8R8H/KX1tVg==" loading="lazy" alt="Sofá">                
                         <h3 class="mt-2">Prueba</h3>
-                        <p class="text-muted mb-0">2.500 ofertas solicitadas</p>
+                        <p class="text-muted mb-0">2.500 solicitudes</p>
                     </div>
                 </a>
             </div>
