--- a/src/app/components/item-oferta-perfil/item-oferta-perfil.component.html
+++ b/src/app/components/item-oferta-perfil/item-oferta-perfil.component.html
@@ -1,14 +1,14 @@
 <div class="row">
     <div class="col-md-3">
-        <p>{{ofertaSeleccionada.titulo}}</p>       
+        <span>{{ofertaSeleccionada.titulo}}</span>
     </div>
     <div class="col-md-3">
-        <p *ngIf="oferta.descripcion.length > 60">{{oferta.descripcion | slice:0:60}}...</p>
-        <p *ngIf="oferta.descripcion.length <= 60">{{oferta.descripcion}}</p>
+        <span *ngIf="oferta.descripcion.length > 60">{{oferta.descripcion | slice:0:60}}...</span>
+        <span *ngIf="oferta.descripcion.length <= 60">{{oferta.descripcion}}</span>
     </div>
     <div class="col-md-6">
-        <a routerLink="/ofertas/{{ofertaSeleccionada.categoria}}/{{ofertaSeleccionada.id}}" class="btn btn-primary">Detalles <i class="fas fa-external-link-alt"></i></a>
-        <button (click)="eliminarOferta(ofertaSeleccionada)" class="btn btn-danger">Eliminar <i class="fas fa-trash"></i></button>
+        <a routerLink="/ofertas/{{ofertaSeleccionada.categoria}}/{{ofertaSeleccionada.id}}" class="btn btn-light" style="margin-right: 10px; border-color: rgba(218, 218, 218, 0.65);"><i class="fas fa-eye"></i></a>
+        <button (click)="eliminarOferta(ofertaSeleccionada)" class="btn btn-danger" style="border-color: rgba(218, 218, 218, 0.65);"><i class="fas fa-trash"></i></button>
     </div>
 </div>
 
