--- a/src/app/components/info-portada/info-portada.component.html
+++ b/src/app/components/info-portada/info-portada.component.html
@@ -5,7 +5,7 @@
             <div class="col-12 col-sm-6 col-md-4 infoPortada">
                 <a class="home-subsection" routerLink="/ofertas/fitness" title="Alfombra" data-subsection-title="Alfombra" data-section-order="1" rel="">
                     <div class="card text-start">
-                        <img src="https://cdn-web-home-images.wallapop.com/home-images-prod/image_330_section_358_2702453a-a660-48d4-86e7-4bbb00b80e70.png?cacheBuster=TgumD43mvac8R8H/KX1tVg==" loading="lazy" alt="Sofá">                
+                        <img src="https://firebasestorage.googleapis.com/v0/b/wajoby-8fbf2.appspot.com/o/jobs_images%2Frestaurante-albala.jpg?alt=media&token=365b1251-a7a2-4f02-9e00-b338a0a25afc" loading="lazy" alt="Sofá">                
                         <h3 class="mt-2">Prueba</h3>
                         <p class="text-muted mb-0">2.500 solicitudes</p>
                     </div>
@@ -14,18 +14,18 @@
             <div class="col-12 col-sm-6 col-md-4 infoPortada">
                 <a class="home-subsection" routerLink="/ofertas/fitness" title="Alfombra" data-subsection-title="Alfombra" data-section-order="1" rel="">
                     <div class="card text-start">
-                        <img src="https://cdn-web-home-images.wallapop.com/home-images-prod/image_330_section_358_2702453a-a660-48d4-86e7-4bbb00b80e70.png?cacheBuster=TgumD43mvac8R8H/KX1tVg==" loading="lazy" alt="Sofá">                
+                        <img src="https://firebasestorage.googleapis.com/v0/b/wajoby-8fbf2.appspot.com/o/jobs_images%2Frestaurante-albala.jpg?alt=media&token=365b1251-a7a2-4f02-9e00-b338a0a25afc" loading="lazy" alt="Sofá">                
                         <h3 class="mt-2">Prueba</h3>
-                        <p class="text-muted mb-0">651.335 ofertas</p>
+                        <p class="text-muted mb-0">2.500 solicitudes</p>
                     </div>
                 </a>
             </div>
             <div class="col-12 col-sm-6 col-md-4 infoPortada">
                 <a class="home-subsection" routerLink="/ofertas/fitness" title="Alfombra" data-subsection-title="Alfombra" data-section-order="1" rel="">
                     <div class="card text-start">
-                        <img src="https://cdn-web-home-images.wallapop.com/home-images-prod/image_330_section_358_2702453a-a660-48d4-86e7-4bbb00b80e70.png?cacheBuster=TgumD43mvac8R8H/KX1tVg==" loading="lazy" alt="Sofá">                
+                        <img src="https://firebasestorage.googleapis.com/v0/b/wajoby-8fbf2.appspot.com/o/jobs_images%2Frestaurante-albala.jpg?alt=media&token=365b1251-a7a2-4f02-9e00-b338a0a25afc" loading="lazy" alt="Sofá">                
                         <h3 class="mt-2">Prueba</h3>
-                        <p class="text-muted mb-0">651.335 ofertas</p>
+                        <p class="text-muted mb-0">2.500 solicitudes</p>
                     </div>
                 </a>
             </div>
