--- a/src/app/components/no-job/no-job.component.html
+++ b/src/app/components/no-job/no-job.component.html
@@ -1,5 +1,5 @@
 <div class="container mt-5 text-center">
-    <img src="https://firebasestorage.googleapis.com/v0/b/wajoby-8fbf2.appspot.com/o/assets%2Fjob-not-found.png?alt=media&token=ae6d6f22-83fb-4f1f-94d4-73c3e68625f4">
+    <img src="https://firebasestorage.googleapis.com/v0/b/wajoby-8fbf2.appspot.com/o/assets%2Fjob-not-found.png?alt=media&token=29d776ae-d1f5-4bfc-83c9-615c75ec8982">
     <p class="mt-5">Parece que no quedan ofertas en esta categoria pero no te abrumes, puedes buscar en otras categorias o comprobar esta más tarde.</p>
-    <a routerLink="/" class="btn btn-primary btn-wajoby">Ver ofertas</a>
+    <a routerLink="/" class="btn btn-wajoby">Ver ofertas</a>
 </div>
