--- a/src/app/components/pie-pagina/pie-pagina.component.html
+++ b/src/app/components/pie-pagina/pie-pagina.component.html
@@ -1,8 +1,19 @@
 <footer id="pie-pagina" class="bg-secondary text-white mt-5 p-5">
     <div class="container">
-        <div class="row">
-            <div class="col">
-                <p class="lead text-center">Copyright &copy; Wajoby</p>
+        <div class="row justify-content-center">
+            <div class="col text-start">
+                <h3>Documentación</h3>
+                <ul>
+                    <li><a style="font-size: 16px;" href="https://github.com/ByBladex/WajobyProject.git" target="_blank"><i class="far fa-file-alt"></i> Documentación del usuario</a></li>
+                    <li><a style="font-size: 16px;" href="https://github.com/ByBladex/WajobyProject.git" target="_blank"><i class="far fa-file-code"></i> Documentación del programador</a></li>
+                </ul>
+                
+            </div>
+            <div class="col text-center">
+                <span class="lead text-center">Copyright &copy; Wajoby</span>
+            </div>
+            <div class="col text-end">
+                <a style="font-size: 24px;" href="https://github.com/ByBladex/WajobyProject.git" target="_blank"><i class="fab fa-github"></i> Github</a>
             </div>
         </div>
     </div>
