--- a/src/app/components/card-oferta/card-oferta.component.html
+++ b/src/app/components/card-oferta/card-oferta.component.html
@@ -1,7 +1,8 @@
 <div class="card">
     <a class="link" routerLink="/ofertas/{{oferta.categoria}}/{{oferta.id}}">
         <div class="card-header">
-            <h3>{{oferta.titulo | slice:0:15}}</h3>
+            <h3 *ngIf="oferta.titulo.length > 20">{{oferta.titulo | slice:0:20}}...</h3>
+            <h3 *ngIf="oferta.titulo.length <= 20">{{oferta.titulo}}</h3>
         </div>
         <div class="row">
             <div class="col text-center">
@@ -21,7 +22,10 @@
                 <div class="col-md-2 p-0" *ngFor="let dia of oferta.diasLaborales | keyvalue"><p class="small-letter"><strong>{{dia.key | slice:0:1 | uppercase}}-{{dia.value | slice:0:3}}</strong></p></div>
             </div>-->
             <div class="row">
-                <div class="col-md-12 text-end p-0"><p>{{oferta.salario}}€</p></div>
+                <div class="col-md-12 text-end p-0">
+                    <h4 class="text-end text-muted" *ngIf="oferta?.salario != null">{{oferta?.salario}}€</h4>
+                    <h4 class="text-end text-muted" *ngIf="oferta?.salario === null">Salario sin especificar</h4>
+                </div>
             </div>
         </div>
     </a>
