--- a/src/app/components/modal-editar-oferta/modal-editar-oferta.component.html
+++ b/src/app/components/modal-editar-oferta/modal-editar-oferta.component.html
@@ -35,8 +35,7 @@
                     </div>
                     <div class="form-group">
                         <label for="salario">Salario</label>
-                        <input type="number" name="salario" class="form-control" #salario="ngModel" [(ngModel)]="oferta.salario" [ngClass]="{'is-invalid': salario.errors && salario.touched}" required>
-                        <div [hidden]="!salario.errors?.required" class="invalid-feedback">Salario requerido</div>
+                        <input type="number" name="salario" class="form-control" #salario="ngModel" [(ngModel)]="oferta.salario" [ngClass]="{'is-invalid': salario.errors && salario.touched}">
                     </div>
                     <div class="modal-footer">
                         <button type="submit" class="btn btn-primary">Editar</button>
