--- a/src/app/components/no-encontrado/no-encontrado.component.html
+++ b/src/app/components/no-encontrado/no-encontrado.component.html
@@ -1,5 +1,5 @@
 <div class="container mt-5 text-center">
-    <img src="https://firebasestorage.googleapis.com/v0/b/wajoby-8fbf2.appspot.com/o/assets%2F404-not-found.png?alt=media&token=e0f4373a-fa1c-4ad2-889e-c949a4814c02">
+    <img src="https://firebasestorage.googleapis.com/v0/b/wajoby-8fbf2.appspot.com/o/assets%2F404-not-found.png?alt=media&token=395e2f17-5744-4a3a-b9bf-05c4fde449e4">
     <p class="mt-5">Uish... Esta página no existe en Wajoby, lo que si existen son miles de ofertas de empleo esperándote.</p>
-    <a routerLink="/" class="btn btn-primary btn-wajoby">Ver ofertas</a>
+    <a routerLink="/" class="btn btn-wajoby">Ver ofertas</a>
 </div>
