--- a/src/app/components/registro/registro.component.html
+++ b/src/app/components/registro/registro.component.html
@@ -22,14 +22,14 @@
                                 <div class="col">
                                     <div class="form-group">
                                         <label for="name">Nombre</label>
-                                            <input type="text" class="form-control" formControlName="name" placeHolder="Example: Carlos" #name ng-maxlength="16" [ngClass]="{'is-invalid': registroForm.controls.name.errors?.required && registroForm.controls.name.touched}">
+                                            <input type="text" class="form-control" formControlName="name" placeHolder="Example: Miguel" #name ng-maxlength="16" [ngClass]="{'is-invalid': registroForm.controls.name.errors?.required && registroForm.controls.name.touched}">
                                         <div [hidden]="!this.registroForm.controls.name.errors?.required" class="invalid-feedback">Nombre requerido</div>
                                     </div>
                                 </div>
                                 <div class="col">
                                     <div class="form-group">
                                         <label for="surnames">Apellidos</label>
-                                            <input type="text" class="form-control" formControlName="surnames" placeHolder="Example: Ocelote" #surnames ng-maxlength="16" [ngClass]="{'is-invalid': registroForm.controls.surnames.errors?.required && registroForm.controls.surnames.touched}">
+                                            <input type="text" class="form-control" formControlName="surnames" placeHolder="Example: Hernández" #surnames ng-maxlength="16" [ngClass]="{'is-invalid': registroForm.controls.surnames.errors?.required && registroForm.controls.surnames.touched}">
                                         <div [hidden]="!this.registroForm.controls.surnames.errors?.required" class="invalid-feedback">Apellidos requeridos</div>
                                     </div>             
                                 </div>
