--- a/src/app/components/info-portada/info-portada.component.html
+++ b/src/app/components/info-portada/info-portada.component.html
@@ -1,6 +1,6 @@
 <div class="container-fluid text-center mt-5" style="background-color: #ECEFF1; margin-bottom: 15px;">
     <div class="container p-5">
-        <h2><strong>Las ofertas más solicitadas</strong></h2>
+        <h2><strong>Las categorías más solicitadas</strong></h2>
         <div style="display: flex; margin-top: 30px;">
             <div class="col-12 col-sm-6 col-md-4 infoPortada">
                 <a class="home-subsection" routerLink="/ofertas/fitness" title="Alfombra" data-subsection-title="Alfombra" data-section-order="1" rel="">
